--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_barcode_scanner: ^1.0.1
+  #qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +48,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  qr_code_scanner: ^0.4.0
+
 
 
 # For information on the generic Dart part of this file, see the
