--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.2.9
   cloud_firestore: ^4.4.3
   provider: ^6.0.5
+  flutter_spinkit: ^5.1.0
   #qr_code_scanner: ^1.0.1
 
 dev_dependencies:
