--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.4.3
   provider: ^6.0.5
   flutter_spinkit: ^5.1.0
+  qr_flutter: ^4.0.0
   #qr_code_scanner: ^1.0.1
 
 dev_dependencies:
