--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.5
   flutter_spinkit: ^5.1.0
   qr_flutter: ^4.0.0
+  awesome_dialog: ^3.0.2
   #qr_code_scanner: ^1.0.1
 
 dev_dependencies:
